# wasm-bits

./: .gitignore  CMakeLists.txt  GLTFSamplerEmbinding.cxx  LSDynaFamilyEmbinding.cxx  LSDynaMetaDataEmbinding.cxx  README.md  build.sh  check_binary_size.cmake  elide.cxx  unity_vtkwebembind_cxx.cxx  vtk3DCursorRepresentationEmbinding.cxx  vtk3DCursorWidgetEmbinding.cxx  vtk3DLinearGridCrinkleExtractorEmbinding.cxx  vtk3DLinearGridPlaneCutterEmbinding.cxx  vtk3DSEmbinding.cxx  vtk3DSImporterEmbinding.cxx  vtk3DWidgetEmbinding.cxx  vtkABIEmbinding.cxx  vtkABINamespaceEmbinding.cxx  vtkAMRBaseParticlesReaderEmbinding.cxx  vtkAMRBaseReaderEmbinding.cxx  vtkAMRBoxEmbinding.cxx  vtkAMRCutPlaneEmbinding.cxx  vtkAMRDataInternalsEmbinding.cxx  vtkAMRDataSetCacheEmbinding.cxx  vtkAMREnzoParticlesReaderEmbinding.cxx  vtkAMREnzoReaderEmbinding.cxx  vtkAMRFlashParticlesReaderEmbinding.cxx  vtkAMRFlashReaderEmbinding.cxx  vtkAMRGaussianPulseSourceEmbinding.cxx  vtkAMRInformationEmbinding.cxx  vtkAMRInterpolatedVelocityFieldEmbinding.cxx  vtkAMRResampleFilterEmbinding.cxx  vtkAMRSliceFilterEmbinding.cxx  vtkAMRToMultiBlockFilterEmbinding.cxx  vtkAMRUtilitiesEmbinding.cxx  vtkAMRVelodyneReaderEmbinding.cxx  vtkAMReXGridReaderEmbinding.cxx  vtkAMReXParticlesReaderEmbinding.cxx  vtkAOSDataArrayTemplateEmbinding.cxx  (+2625 more)
BaseClass/: Makefile  index.html  mymodule.cpp
Callback/: CMakeLists.txt  main.cpp
CallbackCommand/: CMakeLists.txt  build.sh  main.cpp  run.js  vtkEmbindSmartPointerTraits.h
Callbacks0/: CMakeLists.txt  Makefile  build.sh  callback_example.cpp  callback_example.js  index.js
Callbacks1/: Makefile  callback_example.cpp  index.html  main.cpp
Closure/: CMakeLists.txt  main.cpp  run.js
FunctionPointer/: CMakeLists.txt  main.cpp  run.js
FunctionPointer0/: CMakeLists.txt  Makefile  build.sh  callback_example.cpp  index.html  run.js
FunctionPointers/: CMakeLists.txt  build.sh  main.cpp  package.json  run.js
GarbageCollect/: main.js
Inherit/: CMakeLists.txt  build.sh  extra.cpp  main.cpp  run.js
JSCone/: CMakeLists.txt  Viewer.html  vtkAbstractMapper3DEmbinding.cxx  vtkActorEmbinding.cxx  vtkCallbackCommandEmbinding.cxx  vtkConeSourceEmbinding.cxx  vtkMapperEmbinding.cxx  vtkObjectEmbinding.cxx  vtkOpenGLRendererEmbinding.cxx  vtkPolyDataMapperEmbinding.cxx  vtkProp3DEmbinding.cxx  vtkPropEmbinding.cxx  vtkPropertyEmbinding.cxx  vtkRenderWindowEmbinding.cxx  vtkRenderWindowInteractorEmbinding.cxx  vtkRendererEmbinding.cxx  vtkWebAssemblyWebGPURenderWindowEmbinding.cxx
JSConeNative/: CMakeLists.txt
JSSphere/: CMakeLists.txt  Viewer.html  build.sh  vtkAbstractMapperEmbinding.cxx  vtkAlgorithmEmbinding.cxx  vtkAlgorithmOutputEmbinding.cxx  vtkCommandEmbinding.cxx  vtkEmbindSmartPointerTraits.h  vtkObjectBaseEmbinding.cxx  vtkOpenGLRenderWindowEmbinding.cxx  vtkSphereSourceEmbinding.cxx  vtkViewportEmbinding.cxx  vtkWebAssemblyOpenGLRenderWindowEmbinding.cxx  vtkWebAssemblyRenderWindowInteractorEmbinding.cxx  vtkWindowEmbinding.cxx  vtkWindowsEmbinding.cxx
JSSphereNative/: CMakeLists.txt  Viewer.cxx  Viewer.html  build.sh
Lort0/: Makefile  callback_example.js  index.html
ModuleCanvas/: Makefile  index.html  your_code.c  your_script.js
Runtimes/: CMakeLists.txt  Makefile  TODO  build.sh  index.html  main.js  main.mjs  module2.cpp  package-lock.json  package.json  run.js
StdFunction/: CMakeLists.txt  Makefile  Makefile.html  Makefile.html~  function_pointer.js  index.html  run.js
StdFunction++/: CMakeLists.txt  build.sh  callback_example.cpp  function_pointer.cpp  help.cpp  run.js
Template/: CMakeLists.txt  index.html  main.cpp  run.js
files/: Makefile  main.cpp
vtkEmbinding/: CMakeLists.txt  build.sh  vtkEmbindUtils.h
vtkEmbinding/Common/: CMakeLists.txt
vtkEmbinding/Common/Core/: CMakeLists.txt  vtkCallbackCommandEmbinding.cxx  vtkCommandEmbinding.cxx  vtkObjectBaseEmbinding.cxx  vtkObjectEmbinding.cxx  vtkVariantEmbinding.cxx
vtkEmbinding/Common/Core/Testing/: CMakeLists.txt  CallbackTest.cpp  SmartPointerTest.cpp  package.json  run_CallbackTest.js  run_SmartPointerTest.js
vtkEmbinding/Common/DataModel/: CMakeLists.txt  vtkDataObjectEmbinding.cxx  vtkDataSetEmbinding.cxx  vtkImplicitFunctionEmbinding.cxx  vtkPlaneEmbinding.cxx  vtkPointSetEmbinding.cxx  vtkPolyDataEmbinding.cxx
vtkEmbinding/Common/ExecutionModel/: CMakeLists.txt  vtkDataObjectAlgorithmEmbinding.cxx  vtkPolyDataAlgorithmEmbinding.cxx
vtkEmbinding/Common/Math/: CMakeLists.txt  vtkMatrix4x4Embinding.cxx
vtkEmbinding/Common/Transforms/: CMakeLists.txt  vtkAbstractTransformEmbinding.cxx  vtkHomogeneousTransformEmbinding.cxx  vtkLinearTransformEmbinding.cxx  vtkTransformEmbinding.cxx
vtkEmbinding/Common/Transforms/Testing/: CMakeLists.txt  TransformTest.cpp  package.json  run.js
vtkEmbinding/Filters/: CMakeLists.txt
vtkEmbinding/Filters/Core/: CMakeLists.txt  vtkCleanPolyDataEmbinding.cxx  vtkPlaneCutterEmbinding.cxx
vtkEmbinding/Filters/Core/Testing/: CMakeLists.txt  package-lock.json  package.json  run.js  run_PlaneCutSphere.js
vtkEmbinding/Filters/Sources/: CMakeLists.txt  vtkSphereSourceEmbinding.cxx
vtkEmbinding/Interaction/: CMakeLists.txt
vtkEmbinding/Interaction/Widgets/: CMakeLists.txt  vtkAbstractWidgetEmbinding.cxx
vtkEmbinding/Rendering/Core/: CMakeLists.txt  vtkInteractorObserverEmbinding.cxx
vtkRenderWindows/: CMakeLists.txt  OneViewer.html  Viewer.cxx  Viewer.h  Viewer.html  ViewerTest.html  index.html  vtk.html  vtkGenericRenderWindowInteractorEmbinding.cxx  vtkRenderWindowInteractor3DEmbinding.cxx
vtkSmartPointer/: CMakeLists.txt  build.sh  check_last_char.sh  index.html  main.cpp  run.js
wasm-multiwindow/: index.html  main.cpp  main.qml  second.qml  wasm-multiwindow.pro
webgl/: CMakeLists.txt  build.sh  webgl_create_context2.cpp
